--- a/index1.html
+++ b/index1.html
@@ -1636,7 +1636,7 @@
         </div>
 
         <!--底部结束  -->
-        <div data-spm="fpLift" class="fp-nav">
+        <!-- <div data-spm="fpLift" class="fp-nav">
             <div class="mui-lift-nav nav-header">
                 导航
                 <a href="#1"></a>
@@ -1673,7 +1673,7 @@
                 导航
             </div>
 
-        </div>
+        </div> -->
 </body>
 
 </html>
