--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/index1.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>天猫页面模拟练习</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="nav-left">
                 <p id="login-info " class="sn-login-info ">
-                    <em>喵，欢迎来天猫</em>
+                    <em>喵，仅做练习和模拟，如有侵权，立即删除</em>
                     <a class="sn-login " href="# " target="_top ">请登录</a>
                     <a class="sn-register " href="//register.tmall.com/ " target="_top ">免费注册</a>
                 </p>
@@ -96,15 +96,24 @@
         <div class="container">
             <div class="row">
                 <ul class="banner1-nav clearfix">
-                    <li>女装</li>
-                    <li>男装</li>
-                    <li>男装</li>
-                    <li>男装</li>
-                    <li>男装</li>
-                    <li>男装</li>
-                    <li>男装</li>
-                    <li>男装</li>
-                    <li>男装</li>
+                    <li>女装/内衣</li>
+                    <li>女装/内衣</li>
+                    <li>女装/内衣</li>
+                    <li>女装/内衣</li>
+                    <li>女装/内衣</li>
+                    <li>女装/内衣</li>
+                    <li>女装/内衣</li>
+                    <li>女装/内衣</li>
+                    <li>女装/内衣</li>
+                    <li>女装/内衣</li>
+                    <li>女装/内衣</li>
+                    <li>女装/内衣</li>
+                    <li>女装/内衣</li>
+                    <li>女装/内衣</li>
+                    <li>女装/内衣</li>
+                    <li>女装/内衣</li>
+
+
 
                 </ul>
             </div>
@@ -1354,7 +1363,7 @@
                 猜你喜欢</span>
                 </h2>
                 <div class="container">
-                    <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-sm-6 col-md-4 col-lg-20">
                         <div class="like-item">
                             <a href="#">
                                 <img src="./imgs/like1.jpg" class="img-responsive" alt="Responsive image">
@@ -1372,7 +1381,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-sm-6 col-md-4 col-lg-20">
                         <div class="like-item">
                             <a href="#">
                                 <img src="./imgs/like1.jpg" class="img-responsive" alt="Responsive image">
@@ -1390,7 +1399,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-sm-6 col-md-4 col-lg-20">
                         <div class="like-item">
                             <a href="#">
                                 <img src="./imgs/like1.jpg" class="img-responsive" alt="Responsive image">
@@ -1408,7 +1417,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-sm-6 col-md-4 col-lg-20">
                         <div class="like-item">
                             <a href="#">
                                 <img src="./imgs/like1.jpg" class="img-responsive" alt="Responsive image">
@@ -1426,7 +1435,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-sm-6 col-md-4 col-lg-20">
                         <div class="like-item">
                             <a href="#">
                                 <img src="./imgs/like1.jpg" class="img-responsive" alt="Responsive image">
@@ -1444,7 +1453,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-sm-6 col-md-4 col-lg-20">
                         <div class="like-item">
                             <a href="#">
                                 <img src="./imgs/like1.jpg" class="img-responsive" alt="Responsive image">
@@ -1462,7 +1471,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-sm-6 col-md-4 col-lg-20">
                         <div class="like-item">
                             <a href="#">
                                 <img src="./imgs/like1.jpg" class="img-responsive" alt="Responsive image">
@@ -1480,7 +1489,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-sm-6 col-md-4 col-lg-20">
                         <div class="like-item">
                             <a href="#">
                                 <img src="./imgs/like1.jpg" class="img-responsive" alt="Responsive image">
@@ -1498,6 +1507,43 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-sm-6 col-md-4 col-lg-20">
+                        <div class="like-item">
+                            <a href="#">
+                                <img src="./imgs/like1.jpg" class="img-responsive" alt="Responsive image">
+                            </a>
+                            <div class="caption">
+
+                                <p class="content1">
+                                    李宁正品冬季新款 女子运动生活系列休闲保暖短羽绒服
+                                </p>
+
+
+                            </div>
+                            <div class="floor-price" style="text-align: center;">￥179.0
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4 col-lg-20">
+                        <div class="like-item">
+                            <a href="#">
+                                <img src="./imgs/like1.jpg" class="img-responsive" alt="Responsive image">
+                            </a>
+                            <div class="caption">
+
+                                <p class="content1">
+                                    李宁正品冬季新款 女子运动生活系列休闲保暖短羽绒服
+                                </p>
+
+
+                            </div>
+                            <div class="floor-price" style="text-align: center;">￥179.0
+
+                            </div>
+                        </div>
+                    </div>
+
 
                 </div>
 
